[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Popups/PopupBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Popups/ShopPopup.gd" type="Script" id=2]
[ext_resource path="res://UI/Elements/BronzeBorderPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Popups/Addons/MoneyDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Popups/Addons/ItemListDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Popups/Addons/ItemInfo.tscn" type="PackedScene" id=6]

[node name="ShopPopup" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )
ShelvesPath = NodePath("Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/Shelves")
ItemInfoPath = NodePath("Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/ItemInfo")
MoneyDisplayPath = NodePath("Content/CenterContainer/BronzeBorderPanel/VBoxContainer/MoneyDisplay")

[node name="CenterContainer" type="CenterContainer" parent="Content" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 558.0
margin_bottom = 386.0
rect_min_size = Vector2( 1024, 600 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="BronzeBorderPanel" parent="Content/CenterContainer" index="0" instance=ExtResource( 3 )]

margin_left = 233.0
margin_top = 101.0
margin_right = 791.0
margin_bottom = 498.0

[node name="VBoxContainer" type="VBoxContainer" parent="Content/CenterContainer/BronzeBorderPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_top = 35.0
margin_right = 523.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 15
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="MoneyDisplay" parent="Content/CenterContainer/BronzeBorderPanel/VBoxContainer" index="0" instance=ExtResource( 4 )]

margin_left = 215.0
margin_right = 272.0
size_flags_horizontal = 4
size_flags_vertical = 4
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Content/CenterContainer/BronzeBorderPanel/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 31.0
margin_right = 488.0
margin_bottom = 327.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Shelves" parent="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 5 )]

margin_bottom = 296.0

[node name="ItemInfo" parent="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 6 )]

margin_left = 300.0
margin_right = 488.0

[connection signal="item_activated" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/Shelves" to="." method="_on_item_activated"]

[connection signal="item_selected" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/Shelves" to="." method="_on_item_selected"]

[connection signal="nothing_selected" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/Shelves" to="." method="_on_nothing_selected"]

[connection signal="item_bought" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/ItemInfo" to="." method="_on_item_bought"]

[connection signal="item_sold" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/ItemInfo" to="." method="_on_item_sold"]


